Change profile image and a portfolio  button is added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</header>
 					<div class="features">
 						<article>
-							<img class="image" id="phtoprof" src="images/portada.jpg"
+							<img class="image" id="phtoprof" src="images/portada.png"
 								alt="Analista - Desarrollador - Programador - Developer">
 							<div class="inner">
 								<p class="parrafo">Hola, Me llamo <b>Héctor</b> y soy un Estudiante de programación
@@ -110,41 +110,15 @@
 
 			<!-- Three -->
 			<section id="three">
-				<div class="container">
+				<div class="container" data-aos="fade-up">
 					<h3>Algunos trabajos</h3>
-					<p>Te muestro un poco lo que he desarrollado.
-					</p>
-					<div class="features" data-aos="fade-right">
-						<article>
-							<a href="https://hvgamestudio.itch.io/" target="_blank" class="image"><img
-									src="images/itchio.jpg" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
-							<div class="inner">
-								<h4>Videojuegos</h4>
-								<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/"
-										target="_blank"><b>itch.io</b></a> están publicados los pequeños juegos que
-									desarrolle con la aplicación <b>Game Marker Studio 2</b>
-									son simples pero me permitieron adentrarme mucho más en el mundo del desarrollo.</p>
-							</div>
-						</article>
-					</div>
-					<div class="features" data-aos="fade-right">
-						<article>
-							<a href="https://linna-dem.netlify.app" target="_blank" class="image"><img
-									src="images/Sitio Web.jpg"
-									alt="Diseño - Web -portafolio - ilustración - ilustradora" /></a>
-							<div class="inner">
-								<h4>Portafolio</h4>
-								<p class="parrafo">Portafolio de la maravillosa ilustradora <a
-										href="https://linna-dem.netlify.app">Linna-dem.</a></p>
-							</div>
-						</article>
-					</div>
+					<p>Revisa mi Portafolio en el Siguiente <a href="http://portafolio.hectorvaldesm.com/"><input type="button" class="primary" value="Link"/></a></p>
 				</div>
 			</section>
 
 			<!-- Four -->
 			<section id="four">
-				<div class="container" data-aos="flip-left">
+				<div class="container" data-aos="fade-up">
 					<h3>Contactame</h3>
 					<p>Si quieres saber más sobre mi trabajo enviame un mensaje.</p>
 					<form method="post" action="contacto.php">
@@ -163,8 +137,7 @@
 									<li><input type="reset" value="Limpiar" /></li>
 								</ul>
 							</div>
-						</div>
-						<!--div class="g-recaptcha" data-sitekey="6Le_BFcaAAAAAIRzlB2IXgeUTnMlFJkZsuREz1w9"></div-->
+						</div>					
 					</form>
 				</div>
 			</section>
