--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="icon" type="image/png" href="images/logo cuadrado.png">
-	<!--reCaptcha-->
-	<!--script src="https://www.google.com/recaptcha/api.js" async defer></script-->
-	<!--Animacion-->
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	
 
 </head>
 
@@ -92,7 +89,7 @@
 
 			<!-- Two -->
 			<section id="two">
-				<div class="container" data-aos="fade-up">
+				<div class="container">
 					<h3>Conocimientos</h3>
 					<p>Constantemente estoy aprendiendo de manera autodidacta, pero hasta ahora estas son las
 						tecnologías que conozco.</p>
@@ -110,7 +107,7 @@
 
 			<!-- Three -->
 			<section id="three">
-				<div class="container" data-aos="fade-up">
+				<div class="container">
 					<h3>Algunos trabajos</h3>
 					<p>Revisa mi Portafolio en el Siguiente <a href="http://portafolio.hectorvaldesm.com/"><input type="button" class="primary" value="Link"/></a></p>
 				</div>
@@ -118,7 +115,7 @@
 
 			<!-- Four -->
 			<section id="four">
-				<div class="container" data-aos="fade-up">
+				<div class="container">
 					<h3>Contactame</h3>
 					<p>Si quieres saber más sobre mi trabajo enviame un mensaje.</p>
 					<form method="post" action="contacto.php">
@@ -163,10 +160,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script>
-		AOS.init();
-	</script>
 </body>
 
 </html>
